; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/hfi1/extr_chip.c_hreq_response.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/hfi1/extr_chip.c_hreq_response.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hfi1_devdata = type { i32 }

@DC_DC8051_CFG_EXT_DEV_0 = common dso_local global i32 0, align 4
@DC_DC8051_CFG_EXT_DEV_0_COMPLETED_SMASK = common dso_local global i32 0, align 4
@DC_DC8051_CFG_EXT_DEV_0_RETURN_CODE_SHIFT = common dso_local global i32 0, align 4
@DC_DC8051_CFG_EXT_DEV_0_RSP_DATA_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hfi1_devdata*, i64, i64)* @hreq_response to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hreq_response(%struct.hfi1_devdata* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.hfi1_devdata*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.hfi1_devdata* %0, %struct.hfi1_devdata** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.hfi1_devdata*, %struct.hfi1_devdata** %4, align 8
  %8 = load i32, i32* @DC_DC8051_CFG_EXT_DEV_0, align 4
  %9 = load i32, i32* @DC_DC8051_CFG_EXT_DEV_0_COMPLETED_SMASK, align 4
  %10 = load i64, i64* %5, align 8
  %11 = trunc i64 %10 to i32
  %12 = load i32, i32* @DC_DC8051_CFG_EXT_DEV_0_RETURN_CODE_SHIFT, align 4
  %13 = shl i32 %11, %12
  %14 = or i32 %9, %13
  %15 = load i64, i64* %6, align 8
  %16 = trunc i64 %15 to i32
  %17 = load i32, i32* @DC_DC8051_CFG_EXT_DEV_0_RSP_DATA_SHIFT, align 4
  %18 = shl i32 %16, %17
  %19 = or i32 %14, %18
  %20 = call i32 @write_csr(%struct.hfi1_devdata* %7, i32 %8, i32 %19)
  ret void
}

declare dso_local i32 @write_csr(%struct.hfi1_devdata*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
